--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -9,8 +9,8 @@
     {% include navigation.html %}
     <div class="main">
         <div class="box top">
-            <h1 id="title">{{ page.title }}</h1>
-            <h3>{{ page.longtitle }}</h3>
+            <h1>{{ page.title }}</h1>
+            <h3>{{ page.description }}</h3>
         </div>
         <div class="content">{{content}}</div>
         
