--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,4 +9,4 @@
 <link rel="icon" type="icon/ico" href="/assets/images/favicon.ico">
 <script src="https://kit.fontawesome.com/ab8ae3d4f7.js" crossorigin="anonymous"></script>
 
-<script> (function(ss){ window.ldfdr=function(){(ldfdr._q=ldfdr._q||[]).push([].slice.call(arguments).concat(ss));}; (function(d,s){ fs=d.getElementsByTagName(s)[0]; function ce(src){ var cs=d.createElement(s); cs.src=src; setTimeout(function(){fs.parentNode.insertBefore(cs,fs)},1); }; ce('https://sc.lfeeder.com/lftracker_v1_'+ss+'.js'); })(document,'script'); })('JMvZ8gkyplP82pOd'); </script>
+<script src="https://unpkg.com/lunr/lunr.js"></script>
