--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -48,7 +48,7 @@
     display: none;
     font-size: 30px;
 }
-@media only screen and (max-width: 781px) {
+@media only screen and (max-width: 1004px) {
     .navbar {
        padding: 5px;
        padding-left: 0px;
@@ -77,7 +77,8 @@
 .navbar .links {
     float: right;
     font-size: 20px;
-    margin-right: 23px;
+    margin-right: 250px;
+    margin-top: 0px;
 }
 .navbar .links a {
     margin: 7px;
@@ -91,4 +92,60 @@
 }
 .navbar {
     width: 100%;
+}
+
+
+
+.bar {
+    width: 200px;
+    border: 0px solid transparent;
+    transition: 0.5s;
+}
+.bar:focus {
+    width: 765px;
+    max-width: 90%;
+    border: 4px solid rgba(0, 153, 255, 0.795);
+    transition: 0.5s;
+}
+.bar {
+    height: 40px;
+    float: right;
+    margin-left: 15px;
+    border-radius: 5px;
+    font-size: 20px;
+    position: fixed;
+    top: 15px;
+    right: 10px;
+    z-index: 101;
+}
+.results {
+    width: 774px;
+    height: 100%;
+    z-index: 100;
+    max-width: 100%;
+    background-color: rgba(239, 244, 248, 0.938);
+    position: fixed;
+    right: 0px;
+    top: 67px;
+    margin: 0px auto;
+    color: black;
+    transition: 0.5s;
+}
+@media only screen and (max-width: 1004px) {
+    .bar {
+        right: 40px;
+        top: 3px;
+        height: 32px;
+    }
+    .bar:focus {
+        width: 90%;
+    }
+    .results {
+        top: 34px;
+    }
+}
+@media only screen and (max-width: 398px) {
+    .bar {
+        width: 150px;
+    }
 }
