--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -45,21 +45,21 @@
     "name": "Button of Detonation",
     "text": "A button which makes a computer look like its crashed",
     "words": "d de det deto deton detona detonat detonati detonatio detonation Crash Explode Brake Prank button",
-    "url": "https://www.isaboo.co.uk/button/buttonofgif"
+    "url": "https://www.isaboo.co.uk/button/detonation"
   },
   {
     "id": 5,
     "name": "Weird, Crazy and Spooky Theories",
     "text": "Have a read through this intresting list of conspiracies",
     "words": "Conspiracy article bonkers frozen cropcircle colours colors nasa w we wei weir weird t th the theo theor theori theorie theories theory",
-    "url": "https://www.isaboo.co.uk/button/buttonofgif"
+    "url": "https://www.isaboo.co.uk/texts/weird-crazy-and-spooky-theories"
   },
   {
     "id": 6,
     "name": "Change a website",
     "text": "Prank or impress your firends by changing a website's contents!",
     "words": "C Ch Chan Chang Change a w we web webs websi websit website hack h ha hac",
-    "url": "https://www.isaboo.co.uk/button/buttonofgif"
+    "url": "https://www.isaboo.co.uk/texts/change-a-website"
   },
   ];
 
