--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,7 +14,7 @@
     {% endfor %}
   </div>
 </nav>
-<input class="bar" type="search" id="searchbar" onfocus="openresults()" onblur="closeresults()"
+<input class="bar" type="text" id="searchbar" onfocus="openresults()" onblur="closeresults()"
   onkeyup="refresh(this.value)" placeholder="Search..." />
 <div class="hidden" id="results">No results</div>
 
