add launch screen

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,3 +10,12 @@
 <script src="https://kit.fontawesome.com/ab8ae3d4f7.js" crossorigin="anonymous"></script>
 
 <script src="https://unpkg.com/lunr/lunr.js"></script>
+
+<script async>
+    if(localStorage.previsit) {
+        console.log("<empty string>")
+    }
+    else {
+        window.location = "/init";
+    }
+</script>
