--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -61,6 +61,13 @@
     "words": "C Ch Chan Chang Change a w we web webs websi websit website hack h ha hac",
     "url": "https://www.isaboo.co.uk/texts/change-a-website"
   },
+  {
+    "id": 7,
+    "name": "The Crystal Button",
+    "text": "Let the Crystal Button predict the future.",
+    "words": "The C Cr Cry Crys Cryst Crysta Crystal Button",
+    "url": "https://www.isaboo.co.uk/button/crystalbutton"
+  },
   ];
 
   var db = documents.reduce(function (acc, document) {
