--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <div class="links">
         <a href="{{ '/about/' | relative_url }}">About</a>
         <a href="{{ '/contact/' | relative_url }}">Contact</a>
-        <a href="https://www.youtube.com/user/isaboo">Youtube</a>
+        <a href="https://youtube.com/channel/UCxOGyKEpJt_DYXQZwvjyRJQ">Youtube</a>
         <a href="https://www.github.com/isaboo">GitHub</a>
     </div>
     <div class="thanks">
