--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
         <div class="box plug">
             <h2>Find @Isaboo elsewhere:</h2>
             <div class="plug">
-                <img src="{{ '/assets/images/yt.png' | relative_url }}" class="yt-icon"><a href="javascript:alert('Coming Soon!')">Youtube</a>
+                <img src="{{ '/assets/images/yt.png' | relative_url }}" class="yt-icon"><a href="https://youtube.com/channel/UCxOGyKEpJt_DYXQZwvjyRJQ">Youtube</a>
             </div>
             <div class="plug">
                 <img src="https://www.sferalabs.cc/wp-content/uploads/github-logo-white.png" class="gh-icon"><a href="https://www.github.com/isaboo">GitHub</a>
