--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@
                 <a href="{{ '/about/' | relative_url }}">More about this website and me</a>
             </div>
         </div>
-        <div class="box trailer" id="under">Coming soon...</div>
+        <div class="box trailer" id="under">Most recent video: <a href="{{site.data.video.url}}">{{ site.data.video.text }}</a></div>
     </div>
     {% include footer.html %}
 </body>
