fix search link

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,7 +36,7 @@
     "name": "Reaction Tester",
     "text": "Test your reactions and compete with your friends and get a brain speed.",
     "words": "r re rea reac react reacti reactio Reaction Tester ReactionTester Game Speed g ga gam",
-    "url": "https://www.isaboo.co.uk/ReactionTester"
+    "url": "https://www.isaboo.co.uk/reactiontester/"
   }, {
     "id": 3,
     "name": "The GIF Button",
