--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,6 +18,7 @@
 </nav>
 <input class="bar" type="text" id="searchbar" onfocus="openresults()" onblur="closeresults()"
   onkeyup="refresh(this.value)" placeholder="Search..." />
+  <img src="/assets/images/search.svg" class="searchimg">
 <div class="hidden" id="results">No results</div>
 
 <script src="{{ '/assets/js/navigation.js' | relative_url }}"></script>
